Improved UX and scripts

--- a/bootstrap/config.json
+++ b/bootstrap/config.json
@@ -389,11 +389,16 @@
     "responsive-utilities.less",
     "navs.less",
     "navbar.less",
-    "component-animations.less"
+    "progress-bars.less",
+    "component-animations.less",
+    "tooltip.less",
+    "popovers.less"
   ],
   "js": [
+    "tooltip.js",
+    "popover.js",
     "collapse.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=9024a122d3c5c49fb655ba6a676aa06b"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=2eec1be2b235727b95d6b4a7680a72ba"
 }
