Fixed js bugs and improved contents

--- a/bootstrap/config.json
+++ b/bootstrap/config.json
@@ -399,5 +399,5 @@
     "collapse.js",
     "transition.js"
   ],
-  "customizerUrl": "<none>"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=b7a47af2c93d7ca364265922d8eb2297"
 }
